<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddStoryActivity">

    <TextView
        android:id="@+id/tv_new_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/new_story"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_photo_preview"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:background="@drawable/baseline_insert_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_new_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintDimensionRatio="1"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"/>

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintTop_toBottomOf="@id/iv_photo_preview"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintHeight_min="120dp"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintTop_toBottomOf="@+id/add_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>